# Go-CamRecorder

./: .gitmodules  CMakeLists.txt  CalibrationContainer.cpp  CalibrationContainer.h  Go-CamRecorder.cpp  Go-CamRecorder.h  GobanDetector.cpp  GobanDetector.h  GobanState.cpp  GobanState.h  HistoryValue.cpp  HistoryValue.h  LICENSE  MainGo.cpp  MultiSourceVideo.cpp  MultiSourceVideo.h  README.md  SGFGenerator.cpp  SGFGenerator.h  StoneDetector.cpp  StoneDetector.h  StoneState.h  UpdateOnline.cpp  UpdateOnline.h
Examples/: Test.mp4.calib
SGF_Examples/: 2017-02-16.17-20_2612040790.sgf  2017-02-16.21-28_4853343413.sgf
